[gd_scene load_steps=2 format=3 uid="uid://bfbvy82r12g1w"]

[ext_resource type="Script" path="res://utilities/mainMenu/main_menu.gd" id="1_8rlkq"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_8rlkq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 704.0
offset_top = 320.0
offset_right = 1184.0
offset_bottom = 708.0
grow_horizontal = 2
grow_vertical = 2

[node name="startGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_next = NodePath("../loadGame")
focus_previous = NodePath("../quitGame")
text = "Start Game"

[node name="loadGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_next = NodePath("../selectLevel")
focus_previous = NodePath("../startGame")
disabled = true
text = "Load Game	"

[node name="selectLevel" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_next = NodePath("../quitGame")
focus_previous = NodePath("../loadGame")
text = "Select Level"

[node name="quitGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_next = NodePath("../startGame")
focus_previous = NodePath("../selectLevel")
text = "Quit"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 224.0
offset_right = 1888.0
offset_bottom = 192.0
theme_override_font_sizes/bold_font_size = 160
bbcode_enabled = true
text = "[b]Demon Maxwell[/b]	"
scroll_active = false

[connection signal="pressed" from="VBoxContainer/startGame" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/loadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="VBoxContainer/selectLevel" to="." method="_on_select_level_pressed"]
[connection signal="pressed" from="VBoxContainer/quitGame" to="." method="_on_quit_game_pressed"]
